@@ -27,11 +27,6 @@ public class Object3D {
 	public float height;
 	public float depth;
 	
-	/* The boolean value that represents whether this
-	 * object is linked to another, by default this
-	 * should be false */
-	public boolean linked = false;
-	
 	/* The object this is linked to (if any) */
 	public Object3D parent = null;
 	
@@ -88,9 +83,7 @@ public class Object3D {
 	
 	/* The method used to link an object to this one */
 	public void link(Object3D object) {
-		//Set the linked value in the object to true
-		object.linked = true;
-		//Set this object as the 
+		//Set this object as this
 		object.parent = this;
 		//Add the object to the list of linked objects
 		this.linkedObjects.add(object);
@@ -103,7 +96,7 @@ public class Object3D {
 	
 	public Vector3D getPosition() {
 		//Make sure this isn't linked to another object
-		if (! this.linked)
+		if (! this.isLinked())
 			return this.position;
 		else {
 			//Get the position of the parent object
@@ -117,7 +110,7 @@ public class Object3D {
 	
 	public Vector3D getRotation() {
 		//Make sure this isn't linked to another object
-		if (! this.linked)
+		if (! this.isLinked())
 			return this.rotation;
 		else {
 			//Get the rotation of the parent object
@@ -131,7 +124,7 @@ public class Object3D {
 	
 	public Vector3D getScale() {
 		//Make sure this isn't linked to another object
-		if (! this.linked)
+		if (! this.isLinked())
 			return this.scale;
 		else {
 			//Get the scale of the parent object
@@ -142,5 +135,7 @@ public class Object3D {
 			return parentScale;
 		}
 	}
+	
+	public boolean isLinked() { return this.parent != null; }
 	
 }
