@@ -1,4 +1,9 @@
 ------------------------------------------------------
+Release 0 | Beta 2 | Development 0 | Experimental 3
+
+* Added Camera2D
+
+------------------------------------------------------
 Release 0 | Beta 2 | Development 0 | Experimental 2
 
 * Added GUIGroup
@@ -9,7 +14,7 @@ Release 0 | Beta 2 | Development 0 | Experimental 2
 * Fixed bug: Linked object scaling was wrong
 * Fixed bug: GUI components didn't fully work with
  			 object linking
-
+ 
 ------------------------------------------------------
 Release 0 | Beta 2 | Development 0 | Experimental 1
 
